# video2document

./: .gitignore  PLAN.md  README.md  deep-research.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  issues.md
fixtures/: README.md
scripts/: make_fixtures.py
src/video2document/: __init__.py  cli.py  delivery.py  engines.py  exceptions.py  prompts.py  stitching.py  tools.py  workspace.py
src/video2document/stages/: __init__.py  assemble.py  details.py  extract.py  pages.py  transcribe.py
tests/: conftest.py  test_assemble.py  test_cli.py  test_delivery.py  test_details.py  test_extract.py  test_pages.py  test_pipeline.py  test_stitching.py  test_transcribe.py  test_workspace.py
