[project]
name = "video2document"
version = "0.1.0"
description = "Reconstruct a document from a screen recording of it being scrolled: extract frames, isolate one clean image per page, transcribe with a vision LLM, and assemble semantic Markdown."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Fabio Pettenuzzo", email = "pettenuzzofabio@users.noreply.github.com" }]
keywords = ["video", "document", "ocr", "pdf", "llm", "markdown", "ffmpeg"]
dependencies = [
    "typer>=0.15",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[project.scripts]
v2d = "video2document.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pillow>=10.4",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
